--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.3",
-		"serve": "^11.3.2"
+		"serve": "^11.3.2",
+		"styled-components": "^5.2.0"
 	},
 	"scripts": {
 		"dev": "react-scripts start",
